Fix info-card dark mode colors (#974)

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -77,6 +77,7 @@
   --warning-color: #404040;
 
   --info-background-color: rgba(212, 237, 255, 0.9);
+  --info-color: #404040;
 
   --default-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   --header-font-family: "Montserrat", sans-serif;
@@ -160,6 +161,9 @@
 
     --warning-background-color: #444033;
     --warning-color: #ffeeaf;
+
+    --info-background-color: rgba(47, 54, 58, 0.9);
+    --info-color: rgb(162, 216, 255);
   }
 
   /* Use logo with white text for dark navbar. */
